macviews: use cocoa task manager

The Views task manager is not ready to go yet.

Bug: 865557
Change-Id: Ie6fbb6aa52baf5825e5b8025dd31ae2f40ac458f
Reviewed-on: https://chromium-review.googlesource.com/1144135
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Robert Sesek <rsesek@chromium.org>
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576592}