chrome/browser/ui/cocoa/task_manager_mac.mm
@@ -42,10 +42,6 @@ NSString* ColumnIdentifier(int id) {
 }
 
 bool ShouldUseViewsTaskManager() {
-#if BUILDFLAG(MAC_VIEWS_BROWSER)
-  if (!views_mode_controller::IsViewsBrowserCocoa())
-    return true;
-#endif
   return base::FeatureList::IsEnabled(features::kViewsTaskManager);
 }
 
